connecting work page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             srcset="images/e8b54cdb8f130bfe57e905e213ac5893_logowhite-p-500.png 500w, images/e8b54cdb8f130bfe57e905e213ac5893_logowhite-p-800.png 800w, images/e8b54cdb8f130bfe57e905e213ac5893_logowhite-p-1080.png 1080w, images/e8b54cdb8f130bfe57e905e213ac5893_logowhite-p-1600.png 1600w, images/e8b54cdb8f130bfe57e905e213ac5893_logowhite-p-2000.png 2000w, images/e8b54cdb8f130bfe57e905e213ac5893_logowhite.png 2146w"
             alt="" class="home-logo" /></div>
     <div id="Work" class="work-section">
-        <div class="work-row1"><a href="/project-page-1" class="project-link-block-small w-inline-block">
+        <div class="work-row1"><a href="project-page-1.html" class="project-link-block-small w-inline-block">
                 <div class="thumbnail-wrapper"><img
                         src="images/c12d8e8289f6dcd2ffd3a31267c128b6_melancholia_thumbnail_gm.png" loading="lazy"
                         sizes="(max-width: 1920px) 100vw, 1920px"
