--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             srcset="images/128d1fdcd8b95ca805cb825186121028_taperight-p-500.png 500w, images/128d1fdcd8b95ca805cb825186121028_taperight.png 672w"
                             alt="" class="tape-r" /></div>
                 </div>
-            </a><a href="/project-page-1" class="project-link-block-large w-inline-block">
+            </a><a href="project-page-1.html" class="project-link-block-large w-inline-block">
                 <div class="thumbnail-wrapper"><img src="images/witchway_thumbnail_gm.png" loading="lazy"
                         sizes="(max-width: 1920px) 100vw, 1920px"
                         srcset="images/witchway_thumbnail_gm-p-500.png 500w, images/witchway_thumbnail_gm-p-800.png 800w, images/witchway_thumbnail_gm-p-1080.png 1080w, images/witchway_thumbnail_gm-p-1600.png 1600w, images/witchway_thumbnail_gm.png 1920w"
@@ -73,7 +73,7 @@
                             alt="" class="tape-r" /></div>
                 </div>
             </a></div>
-        <div class="work-row2"><a href="/project-page-1" class="project-link-block-small w-inline-block">
+        <div class="work-row2"><a href="project-page-1.html" class="project-link-block-small w-inline-block">
                 <div class="thumbnail-wrapper"><img src="images/panslabyrinth_thumbnail_gm.png" loading="lazy"
                         sizes="(max-width: 1920px) 100vw, 1920px"
                         srcset="images/panslabyrinth_thumbnail_gm-p-500.png 500w, images/panslabyrinth_thumbnail_gm-p-800.png 800w, images/panslabyrinth_thumbnail_gm-p-1080.png 1080w, images/panslabyrinth_thumbnail_gm-p-1600.png 1600w, images/panslabyrinth_thumbnail_gm.png 1920w"
@@ -89,7 +89,7 @@
                             srcset="images/128d1fdcd8b95ca805cb825186121028_taperight-p-500.png 500w, images/128d1fdcd8b95ca805cb825186121028_taperight.png 672w"
                             alt="" class="tape-r" /></div>
                 </div>
-            </a><a href="/project-page-1" class="project-link-block-large w-inline-block">
+            </a><a href="project-page-1.html" class="project-link-block-large w-inline-block">
                 <div class="thumbnail-wrapper"><img src="images/masquerade_thumbnail_gm.png" loading="lazy"
                         sizes="(max-width: 1920px) 100vw, 1920px"
                         srcset="images/masquerade_thumbnail_gm-p-500.png 500w, images/masquerade_thumbnail_gm-p-800.png 800w, images/masquerade_thumbnail_gm-p-1080.png 1080w, images/masquerade_thumbnail_gm-p-1600.png 1600w, images/masquerade_thumbnail_gm.png 1920w"
