Connecting project page to home page

--- a/project-page-1.html
+++ b/project-page-1.html
@@ -26,10 +26,10 @@
         class="nav-bar w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav">
         <div class="nav-bar-container w-container">
             <nav role="navigation" class="nav-menu w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-menu"><a
-                    href="#" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Home</a><a
-                    href="#" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Work</a><a
-                    href="#" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">About</a><a
-                    href="#Contact"
+                    href="index.html" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Home</a><a
+                    href="index.html#Work" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Work</a><a
+                    href="index.html#About" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">About</a><a
+                    href="index.html#Contact"
                     class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Contact</a></nav>
             <div class="menu-button w-nav-button">
                 <div class="menu-button-icon w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-icon-nav-menu"></div>
