contact on project page to stay on project page

--- a/project-page-1.html
+++ b/project-page-1.html
@@ -29,7 +29,7 @@
                     href="index.html" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Home</a><a
                     href="index.html#Work" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Work</a><a
                     href="index.html#About" class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">About</a><a
-                    href="index.html#Contact"
+                    href="#Contact"
                     class="nav-bar-link w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-nav-link">Contact</a></nav>
             <div class="menu-button w-nav-button">
                 <div class="menu-button-icon w-variant-5d20e38f-b61e-2105-3eb8-9002fa8c7091 w-icon-nav-menu"></div>
